--- a/templates/stagiaire/detailStagiaire.html.twig
+++ b/templates/stagiaire/detailStagiaire.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Détail stagiaire{% endblock %}
 {% block body %}
 {% set difference = date("now").diff(date(stagiaire.birth)) %}
-<div class="rounded p-1 bg-light text-dark stagiaire mt-3 w-50">
+<div class="rounded bg-light text-dark stagiaire mt-3 w-50">
     <a class="rounded d-inline-block p-1 mt-1 mb-2 bg-dark text-white" href="{{path('updateStagiaire',{id:stagiaire.id})}}">Modifier</a>
     {% set dateCrea = stagiaire.createdate|date("d/m/Y") %}
     <span>Inscrit le : {{dateCrea}}</span>
