--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -73,7 +73,7 @@
                             <td width="15%">
                                 <a class="" href="{{path('ModifDuree',{id:programme.id,id_session:thisSession.id})}}"><i class="far fa-edit"></i></a>
                                 <!-- <a class="" href="{{path('ModifModule',{id:programme.module.id})}}"><i class="far fa-edit"></i></a> -->
-                                <a data-id="{{programme.id}}" data-session="{{thisSession.id}}" class="delProgramme " href="{{path('programme_delete')}}"><i class="far fa-trash-alt"></i></a>
+                                <a data-id="{{programme.id}}" data-session="{{thisSession.id}}" class="delProgramme " href="{{path('programme_delete',{id:programme.id})}}"><i class="far fa-trash-alt"></i></a>
                             </td>
                         </tr>
                         {% endfor %}                    
