--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,7 @@
     {{parent()}}
 {% endblock %}
 {% block body %}
-<table class="table">
+<table class="table home">
     <thead class="thead-light">
         <tr>
             <th scope="col">Intitulé session</th>
