--- a/templates/stagiaire/addStagiaire.html.twig
+++ b/templates/stagiaire/addStagiaire.html.twig
@@ -7,7 +7,8 @@
         {{ form_row(form.prenom) }}
         {{ form_row(form.sexe) }} 
         {{ form_row(form.birth)}}   
-        {{ form_row(form.ville) }} 
+        {{ form_row(form.ville) }}
+        <div id="hits"></div> 
         {{ form_row(form.email) }} 
         {{ form_row(form.phone) }} 
         {{ form_row(form.photo,{ 'attr': {'onchange': 'readURL(this);'} }) }} 
@@ -39,8 +40,7 @@
     }
   }
   $( function() {
-    console.log($( ".datePicker" ))
-    console.log('toto')
 } );
-    </script>
+</script>
+<script src="{{ asset('scripts/script.js') }}"></script>
 {% endblock %}
