--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,9 @@
                     <a class=" bg-light text-dark rounded" href="{{path('home')}}">Liste des sessions</a>
                 </div>
                 <div>
+                    <a class=" bg-light text-dark rounded" href="{{path('creaCategorie')}}">Créer catégorie</a>
+                </div>
+                <div>
                     <a class=" bg-light text-dark rounded" href="{{path('stagiaire')}}">Liste des stagiaires</a>
                 </div>
                 <div>
