--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,9 @@
                 <div>
                     <a class=" bg-light text-dark rounded" href="{{path('home')}}">Liste des sessions</a>
                 </div>
+                 <div>
+                    <a class=" bg-light text-dark rounded" href="{{path('creaListMat')}}">créer liste de matériel</a>
+                </div>
                 <div>
                     <a class=" bg-light text-dark rounded" href="{{path('creaCategorie')}}">Créer catégorie</a>
                 </div>
