--- a/templates/session/createSession.html.twig
+++ b/templates/session/createSession.html.twig
@@ -10,6 +10,7 @@
     <div>{{ form_row(form.date_fin) }}</div>
     <div>{{ form_row(form.nom) }}</div>
     <div>{{ form_row(form.stagiaires) }}</div>
+    <div>{{ form_row(form.salle) }}</div>
     <div id="programmes"
         data-prototype="{{ form_widget(form.programmes.vars.prototype)|e }}"
         data-widget-tags="{{ '<div class="programmeForm"></div>'|e }}"
