--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,11 +24,17 @@
                     <img src="{{asset('img/konami.jpg')}}" alt="">
                 </div>
                 <div>
-                    <a class=" bg-light text-dark rounded" href="{{path('home')}}">Liste des sessions</a>
+                    <a class=" bg-light text-dark rounded" href="{{path('home')}}">Accueil</a>
                 </div>
-                 <div>
-                    <a class=" bg-light text-dark rounded" href="{{path('creaListMat')}}">créer liste de matériel</a>
+                <div>
+                    <a class=" bg-light text-dark rounded" href="{{path('newMat')}}">Matériel</a>
                 </div>
+               <div>
+                    <a class=" bg-light text-dark rounded" href="{{path('newSalle')}}">Salles</a>
+                </div>
+               {#    <div>
+                    <a class=" bg-light text-dark rounded" href="{{path('creaMat')}}">Matériel</a>
+                </div> #}
                 <div>
                     <a class=" bg-light text-dark rounded" href="{{path('creaCategorie')}}">Créer catégorie</a>
                 </div>
